--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "tdesign-icons-vue-next": "^0.3.6",
     "tdesign-vue-next": "^1.15.2",
     "vue": "^3.5.17"
