--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "lint:prettier": "prettier --write .",
     "format": "pnpm run lint:prettier && pnpm run lint",
     "type-check": "vue-tsc --noEmit",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest --run --coverage",
     "changeset": "changeset",
     "changeset:version": "changeset version",
     "changeset:publish": "changeset publish",
@@ -73,12 +76,16 @@
     "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
+    "@vitest/coverage-v8": "^4.0.15",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-vue": "^10.4.0",
+    "fast-check": "^4.3.0",
+    "jsdom": "^27.2.0",
     "less": "^4.4.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
@@ -86,8 +93,9 @@
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-esbuild": "^6.2.1",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4",
-    "vitepress": "^1.6.3",
+    "vite": "8.0.0-beta.0",
+    "vitepress": "2.0.0-alpha.15",
+    "vitest": "^4.0.15",
     "vue-tsc": "^2.2.12"
   }
 }
