--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,9 +4,10 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -20,6 +21,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "playground/src/**/*.ts",
-    "playground/src/**/*.vue"
+    "playground/src/**/*.vue",
+    "docs/.vitepress/demos/**/*.vue",
+    "docs/.vitepress/demos/**/*.ts",
   ]
 }
