feat(table): 加入autoFill属性

--- a/package.json
+++ b/package.json
@@ -26,20 +26,23 @@
     "README.md"
   ],
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
+  "style": "dist/tdesign-pro-components.css",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.es.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs.js"
     },
-    "./style": "./dist/style.css"
+    "./style.css": "./dist/tdesign-pro-components.css",
+    "./dist/*": "./dist/*"
   },
   "scripts": {
     "dev": "vite --config playground/vite.config.ts playground",
     "dev:docs": "vitepress dev docs",
+    "dev:lib": "vite build --config vite.config.lib.ts --watch",
     "build": "pnpm run build:lib && pnpm run build:types",
     "build:lib": "vite build --config vite.config.lib.ts",
     "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir dist",
@@ -83,6 +86,7 @@
     "rollup-plugin-esbuild": "^6.2.1",
     "typescript": "~5.8.3",
     "vite": "8.0.0-beta.0",
+    "vite-plugin-dts": "^4.5.4",
     "vitepress": "2.0.0-alpha.15",
     "vitest": "^4.0.15",
     "vue-tsc": "^2.2.12"
