--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tdesign-pro-components",
-  "version": "0.1.0",
+  "version": "0.0.0-alpha-20260109054218",
   "description": "Enhanced components based on TDesign Vue Next",
   "keywords": [
     "component",
@@ -56,10 +56,18 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:coverage": "vitest --run --coverage",
+    "prepare": "husky",
     "changeset": "changeset",
+    "changeset:add": "changeset add",
     "changeset:version": "changeset version",
     "changeset:publish": "changeset publish",
-    "release": "pnpm run build && pnpm run changeset:publish"
+    "changeset:status": "changeset status",
+    "version:alpha": "changeset version --snapshot alpha",
+    "version:beta": "changeset version --snapshot beta",
+    "publish:alpha": "pnpm run build && changeset publish --tag alpha",
+    "publish:beta": "pnpm run build && changeset publish --tag beta",
+    "release": "pnpm run build && pnpm run changeset:publish",
+    "release:check": "node scripts/release-check.js"
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
@@ -68,7 +76,10 @@
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.5",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@vitejs/plugin-vue": "^6.0.0",
@@ -77,6 +88,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "fast-check": "^4.3.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.2.0",
     "less": "^4.4.0",
     "oxfmt": "^0.23.0",
