--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tdesign-pro-components",
-  "version": "0.0.0-alpha-20260109054218",
+  "version": "0.0.0",
   "description": "Enhanced components based on TDesign Vue Next",
   "keywords": [
     "component",
@@ -57,17 +57,15 @@
     "test:watch": "vitest",
     "test:coverage": "vitest --run --coverage",
     "prepare": "husky",
-    "changeset": "changeset",
-    "changeset:add": "changeset add",
-    "changeset:version": "changeset version",
-    "changeset:publish": "changeset publish",
-    "changeset:status": "changeset status",
-    "version:alpha": "changeset version --snapshot alpha",
-    "version:beta": "changeset version --snapshot beta",
-    "publish:alpha": "pnpm run build && changeset publish --tag alpha",
-    "publish:beta": "pnpm run build && changeset publish --tag beta",
-    "release": "pnpm run build && pnpm run changeset:publish",
-    "release:check": "node scripts/release-check.js"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "version:patch": "standard-version --release-as patch",
+    "version:minor": "standard-version --release-as minor",
+    "version:major": "standard-version --release-as major",
+    "version:alpha": "standard-version --prerelease alpha",
+    "version:beta": "standard-version --prerelease beta",
+    "release": "pnpm run build && npm publish",
+    "release:dry": "standard-version --dry-run"
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
@@ -87,6 +85,7 @@
     "@vitest/coverage-v8": "^4.0.15",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "conventional-changelog-cli": "^5.0.0",
     "fast-check": "^4.3.0",
     "husky": "^9.1.7",
     "jsdom": "^27.2.0",
@@ -96,6 +95,7 @@
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-esbuild": "^6.2.1",
+    "standard-version": "^9.5.0",
     "typescript": "~5.8.3",
     "vite": "8.0.0-beta.0",
     "vite-plugin-dts": "^4.5.4",
