--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tdesign-pro-components",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Enhanced components based on TDesign Vue Next",
   "keywords": [
     "component",
